[tool.poetry]
name = "rag-chain"
version = "0.1.0"
description = "Rag chain implementation using langchain"
authors = ["Kenan Agyel <kenanagyel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
langchain = "^0.2.11"
langgraph = "^0.1.14"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.17"
python-dotenv = "^1.0.1"
streamlit = "^1.37.0"
watchdog = "^4.0.1"
arxiv = "^2.1.3"
wikipedia = "^1.4.0"
google-search-results = "^2.4.2"
langchainhub = "^0.1.20"
faiss-cpu = "^1.8.0.post1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
